objects/SMAX_PS_ServiceContract_Event__e.object
<CustomObject>
    <description>A Platform Event indicating that a Service Contract Integration Event has occurred.</description>
    <label>Service Contract Event</label>
    <pluralLabel>Service Contract Events</pluralLabel>
    <fields>
        <fullName>SMAX_PS_Action__c</fullName>
        <label>Action</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CreditOkay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Okay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Count_ActiveCPs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Active CPs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Count_ActiveItems__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Active Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Count_InactiveCPs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Inactive CPs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ServiceContractId__c</fullName>
        <label>Service Contract Id</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Count_InactiveItems__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Inactive Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Count_ActiveOpenEntDates__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Active Open Entitlement Dates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Count_ActiveUsedEntDates__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Active Used Entitlement Dates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_ServiceContractNumber__c</fullName>
        <label>SAP Service Contract Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Count_InactiveOpenEntDates__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Inactive Open Entitlement Dates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Count_InactiveUsedEntDates__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Inactive Used Entitlement Dates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>